AUTOMAKE_OPTIONS = no-dependencies

noinst_HEADERS = AudioFile.h \
	Concatenate.h \
	DLFrameUnaryOperation.h \
	FrameAccumulator.h \
	FrameBinaryOperation.h \
	FrameOperation.h \
	FrameUnaryOperation.h \
	GCMS.h \
	GrowingFrameBuffer.h \
	GrowingMatrix.h \
	Label.h \
	LabelSet.h \
	Matrix.h \
	RotatingFrameBuffer.h \
	RotatingMatrix.h \
	MMIAccumulator.h \
	Histogram.h
