AUTOMAKE_OPTIONS = no-dependencies

include_HEADERS = FFTWrap.h

noinst_HEADERS = AudioFile.h \
	Concatenate.h \
	DLFrameUnaryOperation.h \
	FrameAccumulator.h \
	FrameBinaryOperation.h \
	FrameUnaryOperation.h \
	GCMS.h \
	Label.h \
	LabelSet.h \
	Matrix.h \
	MMIAccumulator.h \
	Histogram.h \
	lpc.h \
	window.h \
	mdct.h \
	masking.h \
	psy.h \
	codebook.h \
	internal.h \
	codec.h \
	scales.h
