override includedir=${prefix}/lib/flowdesigner/toolbox/audio_blocks
override datadir=${prefix}/lib/flowdesigner/toolbox/audio_blocks
override libdir=${prefix}/lib/flowdesigner/toolbox/audio_blocks
override bindir=${prefix}/lib/flowdesigner/toolbox/audio_blocks

include_HEADERS = audio.h FFTWrap.h lsp.h

noinst_HEADERS = lpc.h \
	window.h \
	mdct.h \
	fft_3dnow.h \
	stack_alloc.h
